@@ -4,7 +4,6 @@
 #undef DEBUG
 #undef CONFIG_SEARCH_PATH
 #undef AUTHORS
-#undef CONFIG_BUFF
 #undef LIBAST_X11_SUPPORT
 #undef LIBAST_IMLIB2_SUPPORT
 #undef LIBAST_MMX_SUPPORT
