@@ -1,29 +1,3 @@
-*.log
-config.sub
-config.cache
-config.guess
-configure
-ltconfig
-ltmain.sh
 Makefile
 Makefile.in
-aclocal.m4
-config.status
-config.h
-libtool
-stamp-h*
-libast.spec
-config.h.in
-missing
-mkinstalldirs
-install-sh
-libast*.tar.gz
-*.sddf
-Makefile
-Makefile.in
-.deps
-.libs
-lib*.la
-*.da
-*.lo
-libast-config
+types.h
