@@ -1,0 +1,1 @@
+-bap -bbo -br -brs -ce -ci4 -cli2 -cs -di1 -hnl -i4 -l140 -lp -lps -nbc -npcs -nss -nsob -pmt -psl -ts 999
