@@ -30,8 +30,9 @@ static const char cvs_ident[] = "$Id$";
 #include <libast.h>
 #include "perf.h"
 
-unsigned short tnum = 0;
-time_t time1, time2;
+unsigned long tnum = 0;
+struct timeval time1, time2;
+double time_diff;
 long prof_counter;
 
 int perf_macros(void);
@@ -49,19 +50,19 @@ perf_macros(void)
   unsigned long sl1 = 0x98765432, sl2 = 0xffeeddff;
 
   PERF_BEGIN("MEMSET() macro");
-  MEMSET(memset_test, '!', CONST_STRLEN(memset_test));
+  PERF_TEST( MEMSET(memset_test, '!', CONST_STRLEN(memset_test)); );
   PERF_END();
 
   PERF_BEGIN("SWAP() macro");
-  SWAP(sc1, sc2);
-  SWAP(si1, si2);
-  SWAP(sl1, sl2);
+  PERF_TEST( SWAP(sc1, sc2); );
+  PERF_TEST( SWAP(si1, si2); );
+  PERF_TEST( SWAP(sl1, sl2); );
   PERF_END();
 
   PERF_BEGIN("BEG_STRCASECMP() macro");
-  BEG_STRCASECMP("this", "this is a test");
-  BEG_STRCASECMP("thx", "this is another test");
-  BEG_STRCASECMP("this is still another test", "this is");
+  PERF_TEST( BEG_STRCASECMP("this", "this is a test"); );
+  PERF_TEST( BEG_STRCASECMP("thx", "this is another test"); );
+  PERF_TEST( BEG_STRCASECMP("this is still another test", "this is"); );
   PERF_END();
 
   PERF_ENDED("macro");
@@ -77,10 +78,10 @@ perf_strings(void)
   char **slist;
 
   PERF_BEGIN("left_str() function");
-  s1 = left_str("bugger all", 3);
-  s2 = left_str("testing 1-2-3", 7);
-  s3 = left_str(NULL, 0);
-  s4 = left_str("eat me", 0);
+  PERF_TEST( s1 = left_str("bugger all", 3); );
+  PERF_TEST( s2 = left_str("testing 1-2-3", 7); );
+  PERF_TEST( s3 = left_str(NULL, 0); );
+  PERF_TEST( s4 = left_str("eat me", 0); );
   FREE(s1);
   FREE(s2);
   FREE(s3);
@@ -88,10 +89,10 @@ perf_strings(void)
   PERF_END();
 
   PERF_BEGIN("mid_str() function");
-  s1 = mid_str("pneumonoultramicroscopicsilicovolcanoconiosis", 8, 16);
-  s2 = mid_str("abc", 7, 5);
-  s3 = mid_str(NULL, 0, 0);
-  s4 = mid_str("what the heck", -5, 42);
+  PERF_TEST( s1 = mid_str("pneumonoultramicroscopicsilicovolcanoconiosis", 8, 16); );
+  PERF_TEST( s2 = mid_str("abc", 7, 5); );
+  PERF_TEST( s3 = mid_str(NULL, 0, 0); );
+  PERF_TEST( s4 = mid_str("what the heck", -5, 42); );
   FREE(s1);
   FREE(s2);
   FREE(s3);
@@ -99,10 +100,10 @@ perf_strings(void)
   PERF_END();
 
   PERF_BEGIN("right_str() function");
-  s1 = right_str("bugger all", 3);
-  s2 = right_str("testing 1-2-3", 5);
-  s3 = right_str(NULL, 0);
-  s4 = right_str("eat me", 0);
+  PERF_TEST( s1 = right_str("bugger all", 3); );
+  PERF_TEST( s2 = right_str("testing 1-2-3", 5); );
+  PERF_TEST( s3 = right_str(NULL, 0); );
+  PERF_TEST( s4 = right_str("eat me", 0); );
   FREE(s1);
   FREE(s2);
   FREE(s3);
@@ -111,24 +112,24 @@ perf_strings(void)
 
 #ifdef HAVE_REGEX_H
   PERF_BEGIN("regexp_match() function");
-  regexp_match("One particular string", "part");
-  regexp_match("Some other strange string", "^[A-Za-z]+$");
-  regexp_match("some-rpm-package-1.0.1-4.src.rpm", "^(.*)-([^-]+)-([^-])\\.([a-z0-9]+)\\.rpm$");
-  regexp_match("/the/path/to/some/odd/file.txt", "/this/should/not/match");
-  regexp_match("1600x1200", "[[:digit:]]+x[[:digit:]]+");
-  regexp_match("xxx", NULL);
-  regexp_match_r("AbCdEfGhIjKlMnOpQrStUvWxYz", "[[:upper:]]", &r);
-  regexp_match_r("abcdefjhijklmnopqrstuvwxyz", NULL, &r);
-  regexp_match_r("aaaaa", "[[:lower:]]", &r);
+  PERF_TEST( regexp_match("One particular string", "part"); );
+  PERF_TEST( regexp_match("Some other strange string", "^[A-Za-z]+$"); );
+  PERF_TEST( regexp_match("some-rpm-package-1.0.1-4.src.rpm", "^(.*)-([^-]+)-([^-])\\.([a-z0-9]+)\\.rpm$"); );
+  PERF_TEST( regexp_match("/the/path/to/some/odd/file.txt", "/this/should/not/match"); );
+  PERF_TEST( regexp_match("1600x1200", "[[:digit:]]+x[[:digit:]]+"); );
+  PERF_TEST( regexp_match("xxx", NULL); );
+  PERF_TEST( regexp_match_r("AbCdEfGhIjKlMnOpQrStUvWxYz", "[[:upper:]]", &r); );
+  PERF_TEST( regexp_match_r("abcdefjhijklmnopqrstuvwxyz", NULL, &r); );
+  PERF_TEST( regexp_match_r("aaaaa", "[[:lower:]]", &r); );
   PERF_END();
 #endif
 
   PERF_BEGIN("split() function");
-  slist = split(" ", "Splitting a string on spaces");
-  slist = split(NULL, "          a\t \ta        a a a a       a     ");
-  slist = split(NULL, "  first \"just the second\" third \'fourth and \'\"fifth to\"gether last");
-  slist = split(NULL, "\'don\\\'t\' try this    at home \"\" ");
-  slist = split(":", "A:B:C:D:::E");
+  PERF_TEST( slist = split(" ", "Splitting a string on spaces"); );
+  PERF_TEST( slist = split(NULL, "          a\t \ta        a a a a       a     "); );
+  PERF_TEST( slist = split(NULL, "  first \"just the second\" third \'fourth and \'\"fifth to\"gether last"); );
+  PERF_TEST( slist = split(NULL, "\'don\\\'t\' try this    at home \"\" "); );
+  PERF_TEST( slist = split(":", "A:B:C:D:::E"); );
   PERF_END();
 
   PERF_ENDED("string");
@@ -142,13 +143,13 @@ perf_obj(void)
   spif_classname_t cname;
 
   PERF_BEGIN("spif_obj_create_delete");
-  testobj = spif_obj_new();
-  spif_obj_del(testobj);
+  PERF_TEST( testobj = spif_obj_new(); );
+  PERF_TEST( spif_obj_del(testobj); );
   PERF_END();
 
   testobj = spif_obj_new();
   PERF_BEGIN("spif_obj_get_classname");
-  cname = spif_obj_get_classname(testobj);
+  PERF_TEST( cname = spif_obj_get_classname(testobj); );
   PERF_END();
   spif_obj_del(testobj);
 
@@ -169,94 +170,94 @@ perf_str(void)
   spif_charptr_t foo;
 
   PERF_BEGIN("spif_str_new_del");
-  teststr = spif_str_new();
-  spif_str_del(teststr);
+  PERF_TEST( teststr = spif_str_new(); );
+  PERF_TEST( spif_str_del(teststr); );
   PERF_END();
 
   teststr = spif_str_new();
   PERF_BEGIN("spif_obj_get_classname");
-  cname = spif_obj_get_classname(SPIF_OBJ(teststr));
+  PERF_TEST( cname = spif_obj_get_classname(SPIF_OBJ(teststr)); );
   PERF_END();
   spif_str_del(teststr);
 
   PERF_BEGIN("spif_str_new_del_from_ptr");
-  teststr = spif_str_new_from_ptr(tmp);
-  spif_str_del(teststr);
+  PERF_TEST( teststr = spif_str_new_from_ptr(tmp); );
+  PERF_TEST( spif_str_del(teststr); );
   PERF_END();
 
   PERF_BEGIN("spif_str_new_del_from_buff");
-  teststr = spif_str_new_from_buff(buff, sizeof(buff));
-  spif_str_del(teststr);
+  PERF_TEST( teststr = spif_str_new_from_buff(buff, sizeof(buff)); );
+  PERF_TEST( spif_str_del(teststr); );
   PERF_END();
 
   PERF_BEGIN("spif_str_dup");
-  teststr = spif_str_new_from_ptr(tmp);
-  test2str = spif_str_dup(teststr);
-  spif_str_del(teststr);
-  spif_str_del(test2str);
+  PERF_TEST( teststr = spif_str_new_from_ptr(tmp); );
+  PERF_TEST( test2str = spif_str_dup(teststr); );
+  PERF_TEST( spif_str_del(teststr); );
+  PERF_TEST( spif_str_del(test2str); );
   PERF_END();
 
   teststr = spif_str_new_from_ptr(tmp2);
 
   PERF_BEGIN("spif_str_index");
-  spif_str_index(teststr, '#');
+  PERF_TEST( spif_str_index(teststr, '#'); );
   PERF_END();
 
   PERF_BEGIN("spif_str_rindex");
-  spif_str_rindex(teststr, '#');
+  PERF_TEST( spif_str_rindex(teststr, '#'); );
   PERF_END();
 
   test2str = spif_str_new_from_ptr("ring");
   PERF_BEGIN("spif_str_find");
-  spif_str_find(teststr, test2str);
+  PERF_TEST( spif_str_find(teststr, test2str); );
   PERF_END();
   spif_str_del(test2str);
 
   PERF_BEGIN("spif_str_find_from_ptr");
-  spif_str_find_from_ptr(teststr, "in");
+  PERF_TEST( spif_str_find_from_ptr(teststr, "in"); );
   PERF_END();
 
   spif_str_del(teststr);
 
   teststr = spif_str_new_from_ptr(tmp);
   PERF_BEGIN("spif_str_substr");
-  test2str = spif_str_substr(teststr, 2, 5);
-  spif_str_del(test2str);
-  test2str = spif_str_substr(teststr, -4, 4);
-  spif_str_del(test2str);
+  PERF_TEST( test2str = spif_str_substr(teststr, 2, 5); );
+  PERF_TEST( spif_str_del(test2str); );
+  PERF_TEST( test2str = spif_str_substr(teststr, -4, 4); );
+  PERF_TEST( spif_str_del(test2str); );
   PERF_END();
   spif_str_del(teststr);
 
   teststr = spif_str_new_from_ptr(tmp);
   PERF_BEGIN("spif_str_substr_to_ptr");
-  foo = spif_str_substr_to_ptr(teststr, 2, 5);
+  PERF_TEST( foo = spif_str_substr_to_ptr(teststr, 2, 5); );
   FREE(foo);
-  foo = spif_str_substr_to_ptr(teststr, -4, 4);
+  PERF_TEST( foo = spif_str_substr_to_ptr(teststr, -4, 4); );
   FREE(foo);
   PERF_END();
   spif_str_del(teststr);
 
   teststr = spif_str_new_from_ptr("11001001");
   PERF_BEGIN("spif_str_to_num");
-  spif_str_to_num(teststr, 10);
+  PERF_TEST( spif_str_to_num(teststr, 10); );
   PERF_END();
   spif_str_del(teststr);
 
   teststr = spif_str_new_from_ptr("3.1415");
   PERF_BEGIN("spif_str_to_float");
-  spif_str_to_float(teststr);
+  PERF_TEST( spif_str_to_float(teststr); );
   PERF_END();
   spif_str_del(teststr);
 
   teststr = spif_str_new_from_ptr("  \n \r\f       \t    testing 1 2 3    \v\r \n");
   PERF_BEGIN("spif_str_trim");
-  spif_str_trim(teststr);
+  PERF_TEST( spif_str_trim(teststr); );
   PERF_END();
   spif_str_del(teststr);
 
   teststr = spif_str_new_from_buff(buff, sizeof(buff));
   PERF_BEGIN("spif_str_reverse");
-  spif_str_reverse(teststr);
+  PERF_TEST( spif_str_reverse(teststr); );
   PERF_END();
   spif_str_del(teststr);
 
@@ -276,8 +277,8 @@ perf_tok(void)
   spif_charptr_t foo;
 
   PERF_BEGIN("spif_tok_new_del_from_ptr");
-  testtok = spif_tok_new_from_ptr(tmp);
-  spif_tok_del(testtok);
+  PERF_TEST( testtok = spif_tok_new_from_ptr(tmp); );
+  PERF_TEST( spif_tok_del(testtok); );
   PERF_END();
 
   PERF_ENDED("spif_tok_t");
@@ -288,13 +289,13 @@ int
 main(int argc, char *argv[])
 {
   int ret = 0;
-  time_t t1,t2;
+  struct timeval t1, t2;
 
   USE_VAR(argc);
   USE_VAR(argv);
 
  
-  time(&t1);
+  gettimeofday(&t1, NULL);
 
   if ((ret = perf_macros()) != 0) {
     return ret;
@@ -312,8 +313,8 @@ main(int argc, char *argv[])
     return ret;
   }
 
-  time(&t2);
+  gettimeofday(&t2, NULL);
 
-  printf("All profiling done, time elapsed %d.\n\n", t2-t1);
+  printf("All profiling done, %6.5f seconds total.\n\n", TDIFF(t1, t2));
   return 0;
 }
